# careercore

./: .env.example  .gitignore  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  docker-compose.yml  memory.md  notes.md  run-issue.sh  security-audit.md
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260413_0001_create_users_table.py  20260413_0002_create_refresh_tokens_table.py  20260413_0003_create_profile_tables.py  20260414_0003a_create_job_description_and_requirement_tables.py  20260414_0004_create_job_analysis_tables.py  20260414_0005_create_ai_call_logs_table.py  20260414_0006_create_uploaded_files_table.py  20260414_0007_create_audit_logs_table.py  20260414_0008_create_resume_tables.py
backend/app/: main.py
backend/app/ai/: dependencies.py  exceptions.py  provider.py  schemas.py
backend/app/core/: config.py  dependencies.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  ai_call_log.py  audit_log.py  certification.py  job_analysis.py  job_description.py  job_requirement.py  profile.py  project.py  refresh_token.py  resume.py  skill.py  uploaded_file.py  user.py  work_experience.py
backend/app/schemas/: file.py  job.py  profile.py  resume.py  user.py
backend/app/services/: ai_cost_service.py  audit_service.py  auth_service.py  file_service.py  job_service.py  profile_service.py  resume_service.py  scoring_service.py
backend/app/workers/: celery_app.py
backend/tests/: conftest.py
backend/tests/integration/: test_health.py  test_resume_job_ownership.py
backend/tests/unit/: test_ai_call_log_migration.py  test_ai_provider_resolver.py  test_audit_log_migration.py  test_input_validation_schemas.py  test_job_analysis_migrations.py  test_job_description_migrations.py  (+7 more)
cli/: main.py
(+114 files in other folders)
